update scan table size dropdown

--- a/web/app/app/views/scaners/index.html.erb
+++ b/web/app/app/views/scaners/index.html.erb
@@ -67,6 +67,7 @@ $(document).ready(function() {
 		bServerSide: true,     
 		processing: true,
 		bSort: false,
+		lengthMenu: [ [100, 200, 400, 1000], [100, 200, 400, 1000] ],
 		sAjaxSource: $('#target_list').data('source')
 	});
 	setInterval( function () {
